Change array construction for fuzzing transform